--- a/style.css
+++ b/style.css
@@ -20,6 +20,10 @@ html{
     overflow-x: hidden;
 }
 
+section{
+    padding: 2rem 9%;
+}
+
 header{
     position: fixed;
     top: 0; left:0; right:0;
@@ -67,8 +71,30 @@ header .fa-bars{
     display:none;
 }
 
+.home {
+    display: flex;
+    align-items: center;
+    min-height: 100vh;
+    background:url(../images/home-bg.jpg) no-repeat; /*insert home bg picture here*/
+    background-size: cover;
+    background-position:center;
+}
 
+.home .content{
+    max-width: 50rem;
+}
 
+.home .content h3{
+    font-size: 6rem;
+    color: #000;
+}
+
+.home .content span{
+    font-size: 3.5rem;
+    color: pink;
+    padding: 1rem 0;
+    line-height: 1.5;
+}
 
 
 
@@ -106,6 +132,14 @@ header .fa-bars{
     header{
         padding: 2rem;
     }
+
+    section{
+        padding:2rem;
+    }
+
+    .home{
+        background-position:left;
+    }
 }
 
 @media (max-width:768px){
@@ -137,6 +171,14 @@ header .fa-bars{
         background: #000;
         border: .1rem solid rgba(0,0,0,.1);
         display: block;
+    }
+
+    .home .content h3{
+        font-size:5rem;
+    }
+
+    .home .content span{
+        font-size:2.5rem;
     }
 }
 
