--- a/style.css
+++ b/style.css
@@ -24,6 +24,45 @@ section{
     padding: 2rem 9%;
 }
 
+.btn{
+    display: inline-block;
+    margin-top: 1rem;
+    border-radius: 5rem;
+    background:#333;
+    color:#fff;
+    padding: .9rem 3.5rem;
+    cursor: pointer;
+    font-size: 1.7rem;
+}
+
+.btn:hover{
+    background-color: rgb(253, 0, 160) ;
+}
+
+#about-btn{
+    background:#fff;
+    color:black;
+}
+
+#about-btn:hover{
+    background-color: rgb(253, 0, 160) ;
+    color:#fff;
+}
+
+
+.heading{
+    text-align: center;
+    font-size: 4rem;
+    color: #000;
+    padding: 1rem;
+    margin: 2rem 0;
+    background: rgba(255, 255, 255);
+}
+
+.heading span{
+    color:rgb(253, 0, 160);
+}
+
 header{
     position: fixed;
     top: 0; left:0; right:0;
@@ -96,14 +135,50 @@ header .fa-bars{
     line-height: 1.5;
 }
 
+.about{
+    background-color:#000;
+}
 
+.about .row{
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    flex-wrap: wrap;
+    padding: 2rem 0;
+    padding-bottom: 3rem;
+}
 
+.about .row .picture-container{
+    flex: 1 1 40rem;
+    position: relative;
+}
 
+.about .row .picture-container img{
+    width:100%;
+    border: 0.5rem solid#fff;
+    color:#fff;
+    border-radius: .5rem;
+    box-shadow: 0 .5rem 1rem rgba(255, 255, 255, 0.625);
+    height: 100%;
+    object-fit:cover ;
+}
 
+.about .row .content{
+    flex: 1 1 40rem;
+}
 
+.about .row .content h3{
+    font-size: 3rem;
+    color:#fff;
+}
 
-
-
+.about .row .content p{
+    font-size: 1.5rem;
+    color:#fff;
+    padding: 5rem 0;
+    padding-top: 1rem;
+    line-height: 1.5;
+}
 
 
 
@@ -185,5 +260,9 @@ header .fa-bars{
 @media (max-width:450px){
     html{
         font-size: 50%;
+    }
+
+    .heading{
+        font-size: 3rem;
     }
 }
