--- a/style.css
+++ b/style.css
@@ -165,12 +165,39 @@ header .fa-bars{
     line-height: 1.5;
 }
 
+.skills-container{
+    background:#eee;
+    display:flex;
+    flex-wrap: wrap;
+    gap:1.5rem;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+}
 
+.skills-container .icons{
+    background:#fff;
+    border:.1rem solid rgba(0,0,0,.1);
+    padding:2rem;
+    display: flex;
+    align-items: center;
+    flex: 1 1 25rem
+}
 
+.skills-container .icons img{
+    height:5rem;
+    margin-right: 2rem;
+}
 
+.skills-container .icons h3{
+    color:rgb(253, 0, 160);
+    padding-bottom: .5rem;
+    font-size: 1.5rem;
+}
 
-
-
+.skills-container .icons span{
+    color:#555;
+    font-size: 1.3rem;
+}
 
 
 
@@ -239,6 +266,14 @@ header .fa-bars{
 
     .home .content span{
         font-size:2.5rem;
+    }
+
+    .skills-container .icons h3{
+        font-size: 2rem;
+    }
+
+    .skills-container .icons span{
+        font-size: 1.7rem;
     }
 }
 
