--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ header .fa-bars{
     display: flex;
     align-items: center;
     min-height: 100vh;
-    background:url(../images/home-bg.jpg) no-repeat; /*insert home bg picture here*/
+    background:url(../images/home-bg.jpg) no-repeat;
     background-size: cover;
     background-position:center;
 }
@@ -115,11 +115,12 @@ header .fa-bars{
 .home .content h3{
     font-size: 6rem;
     color: #000;
+    text-transform: lowercase;
 }
 
 .home .content span{
     font-size: 3.5rem;
-    color: pink;
+    color: rgb(253, 0, 160);
     padding: 1rem 0;
     line-height: 1.5;
 }
@@ -160,13 +161,25 @@ header .fa-bars{
 .about .row .content p{
     font-size: 1.5rem;
     color:#333;
-    padding: 5rem 0;
+    padding:5rem 0;
     padding-top: 1rem;
     line-height: 1.5;
+    text-transform: none;
+    text-align: justify;
+}
+
+.about .row .content span{
+    color:rgb(253, 0, 160);
 }
 
 .skills-container{
-    background:#eee;
+    background:url(../images/skills-bg.jpg) no-repeat;
+    gap:1.5rem;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+}
+
+.skills-container .icons-container{
     display:flex;
     flex-wrap: wrap;
     gap:1.5rem;
@@ -175,16 +188,16 @@ header .fa-bars{
 }
 
 .skills-container .icons{
-    background:#fff;
-    border:.1rem solid rgba(0,0,0,.1);
+    background:rgba(255, 255, 255, .75);
     padding:2rem;
     display: flex;
     align-items: center;
-    flex: 1 1 25rem
+    flex: 1 1 25rem;
+    border-radius: 1rem;
 }
 
 .skills-container .icons:hover{
-    background:rgba(0,0,0,.1);
+    background:#fff;
     box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.5);
 }
 
@@ -249,6 +262,10 @@ header .fa-bars{
     line-height: 1.5;
 }
 
+.footer{
+    background:#000;
+}
+
 .footer .box-container{
     display: flex;
     flex-wrap: wrap;
@@ -267,7 +284,7 @@ header .fa-bars{
 
 .footer .box-container .box a{
     display:block;
-    color:#333;
+    color:#fff;
     font-size: 1.5rem;
     padding: 1rem 0;
 }
@@ -283,7 +300,7 @@ header .fa-bars{
     margin-top: 1.5rem;
     padding-top: 2.5rem;
     font-size: 2rem;
-    color:#333;
+    color:#fff;
     border-top: .1 solid rgba(0, 0, 0, .1);
 }
 
